Generic serdes implementation (#5171)
* Move kafka serdes to a separate directory and remove deprecated classes

* Create generic serdes and prepare avro kafka serdes delegating them

* Prepare generic jsonschema serdes

* Create kafka jsonschema serde

* Prepare protobuf kafka serdes

* Adapt converters to new serdes structure

* Fix headers handler configuration and improve default configuration management

* Improve generic serdes structure

* Fix schema resolver initialisation process

* Fix headers handling in jsonschema serde

* Fix protobuf serde configuration

* Adjust integration tests to new structure

* Rename kafka serdes common module directory

* Adapt examples to the generic serdes structure

* Update migrating client applications documentation